Fixed ViewHPIActivity and related classes